proj2_k8s/database/mysql-headlessService.yaml
# Headless Service
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ay262-parker-namespace
  labels:
    app: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  selector:
    app: mysql
